feat: 新增輸入相同URL產生一樣的縮址 與 瀏覽器輸入縮址導向原本URL 功能

--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -1,6 +1,6 @@
 <div>
   <form action="/URL_shortener" method="POST">
-    <input type="text" name="URL" placeholder="http://" required>
+    <input type="text" name="URL" placeholder="http://" {{#if URL}} value="{{ URL }}" {{/if}} required>
     <button type="submit">縮址</button>
   </form>
 </div>
