--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -1,24 +1,34 @@
-<div>
-  <form action="/URL_shortener" method="POST" class="needs-validated" novalidate>
-    <div class="position-relative">
-      <input type="url" name="URL" class="form-control" placeholder="http://" {{#if URL}} value="{{ URL }}" {{/if}}
-        required>
-      {{!-- 在防止表單送出後出現，提示使用者 --}}
-      <div class="invalid-feedback">
-        請輸入正確網址
-      </div>
-    </div>
-    <button type="submit">縮址</button>
-  </form>
-</div>
+<div class="d-flex flex-column my-5 align-items-center">
+  <h2>URL ShortURL</h2>
+  <img src="https://assets-lighthouse.alphacamp.co/uploads/image/file/16716/ExportedContentImage_00.png" class="mt-3"
+    style="max-height: 200px;">
 
-{{#if shortURL}}
-<div>
-  <div id="shortURL">{{ shortURL }}</div>
+  <div>
+    <form action="/URL_shortener" method="POST" class="needs-validated d-flex flex-column align-items-center"
+      novalidate>
+      <div class="position-relative">
+        <input type="url" name="URL" class="form-control mt-3" style="width: 500px;" placeholder="http://" {{#if URL}}
+          value="{{ URL }}" {{/if}} required>
+        {{!-- 在防止表單送出後出現，提示使用者 --}}
+        <div class="invalid-feedback">
+          請輸入正確網址
+        </div>
+      </div>
+      <button type="submit" class="mt-3 btn btn-outline-primary">shorten</button>
+    </form>
+  </div>
+
+  {{#if shortURL}}
+
+  <div class="alert alert-success mt-3">
+    <div>Success! Please use this link:</div>
+    <a href="{{ shortURL }}" target="_blank" id="shortURL">{{ shortURL }}</a>
+  </div>
   {{!-- 點擊按鈕會執行 function copy() --}}
-  <button type="button" onclick="copy()">Copy</button>
+  <button type="button" onclick="copy()" class="btn btn-primary">Copy</button>
+
+  {{/if}}
 </div>
-{{/if}}
 
 
 
